--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "keywords": [],
   "author": "Wil Moore III <wil.moore@wilmoore.com>",
   "license": "MIT",
-  "dependencies": {
-  },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.7",
+    "@types/node": "^22.0.0",
     "typescript": "^5.5.4"
   },
   "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
