--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wroute",
   "version": "0.5.1",
-  "description": "A minimal RFC6570 conforming HTTP multiplexer for defining endpoints with typed URI Template Syntax",
+  "description": "Minimal RFC6570 conforming HTTP multiplexer for defining endpoints with typed URI Template Syntax",
   "main": "router",
   "scripts": {
     "dev": "node --watch --env-file=example/.env.template -r ts-node/register example/server"
